--- a/Resources/translations/NovosgaUsersBundle.pt_BR.xlf
+++ b/Resources/translations/NovosgaUsersBundle.pt_BR.xlf
@@ -174,6 +174,10 @@
         <source>error.permission_denied</source>
         <target>Permissão negada</target>
       </trans-unit>
+      <trans-unit id="45">
+        <source>error.more_than_one_lotation</source>
+        <target>Não pode ter mais de uma lotação por unidade</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
