--- a/Resources/translations/NovosgaUsersBundle.pt_PT.xlf
+++ b/Resources/translations/NovosgaUsersBundle.pt_PT.xlf
@@ -1,24 +1,23 @@
 <?xml version="1.0" ?><xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-  <file datatype="plaintext" original="messages.pt_BR.xlf" source-language="pt-BR" target-language="es">
+  <file datatype="plaintext" original="messages.pt_BR.xlf" source-language="pt-BR" target-language="pt-PT">
     <body>
       <trans-unit id="0">
         <source>module.name</source>
-        <target>Usuarios</target>
+        <target>Utilizadores</target>
         
       </trans-unit>
       <trans-unit id="1">
         <source>title</source>
-        <target>Usuarios</target>
+        <target>Utilizadores</target>
         
       </trans-unit>
       <trans-unit id="2">
         <source>subtitle</source>
-        <target>Administrar usuarios de la unidad actual</target>
         
       </trans-unit>
       <trans-unit id="3">
         <source>form.lotacao.unidade</source>
-        <target>Unidad</target>
+        <target>Unidade</target>
         
       </trans-unit>
       <trans-unit id="4">
@@ -28,67 +27,62 @@
       </trans-unit>
       <trans-unit id="5">
         <source>form.user.username</source>
-        <target>Nombre de usuario</target>
+        <target>Nome de utilizador</target>
         
       </trans-unit>
       <trans-unit id="6">
         <source>form.user.name</source>
-        <target>Nombre</target>
+        <target>Nome</target>
         
       </trans-unit>
       <trans-unit id="7">
         <source>form.user.lastname</source>
-        <target>Apellido</target>
+        <target>Apelido</target>
         
       </trans-unit>
       <trans-unit id="8">
         <source>form.user.email</source>
-        <target>Correo Electronico</target>
         
       </trans-unit>
       <trans-unit id="9">
         <source>form.user.active</source>
-        <target>Activo</target>
+        <target>Ativo</target>
         
       </trans-unit>
       <trans-unit id="10">
         <source>form.user.password</source>
-        <target>Contraseña</target>
+        <target>Senha</target>
         
       </trans-unit>
       <trans-unit id="11">
         <source>form.user.password_confirm</source>
-        <target>Confirmación de la contraseña</target>
         
       </trans-unit>
       <trans-unit id="12">
         <source>error.password_confirm</source>
-        <target>La contraseña y la confirmación de la contraseña no coiciden.</target>
         
       </trans-unit>
       <trans-unit id="13">
         <source>section.general.title</source>
-        <target>General</target>
+        <target>Geral</target>
         
       </trans-unit>
       <trans-unit id="14">
         <source>section.general.subtitle</source>
-        <target>Datos básicos del usuario.</target>
         
       </trans-unit>
       <trans-unit id="15">
         <source>section.lotation.title</source>
-        <target>Dotaciones</target>
+        <target>Alocações</target>
         
       </trans-unit>
       <trans-unit id="16">
         <source>section.lotation.subtitle</source>
-        <target>La asignación se utiliza para definir el perfil de acceso del usuario en las unidades.</target>
         
       </trans-unit>
       <trans-unit id="17">
         <source>label.unity</source>
-        <target>Unidad</target>
+        <target>Unidade</target>
         
       </trans-unit>
       <trans-unit id="18">
@@ -98,7 +92,7 @@
       </trans-unit>
       <trans-unit id="19">
         <source>button.add</source>
-        <target>Agregar</target>
+        <target>Adicionar</target>
         
       </trans-unit>
       <trans-unit id="20">
@@ -108,7 +102,7 @@
       </trans-unit>
       <trans-unit id="21">
         <source>button.back</source>
-        <target>Volver</target>
+        <target>Voltar</target>
         
       </trans-unit>
       <trans-unit id="22">
@@ -118,77 +112,76 @@
       </trans-unit>
       <trans-unit id="23">
         <source>button.change</source>
-        <target>Modificar</target>
+        <target>Alterar</target>
         
       </trans-unit>
       <trans-unit id="24">
         <source>button.new_user</source>
-        <target>Nuevo usuario</target>
         
       </trans-unit>
       <trans-unit id="25">
         <source>button.change_password</source>
-        <target>Modificar contraseña</target>
+        <target>Alterar senha</target>
         
       </trans-unit>
       <trans-unit id="26">
         <source>button.view_permissions</source>
-        <target>Ver permisos</target>
+        <target>Ver permissões</target>
         
       </trans-unit>
       <trans-unit id="27">
         <source>button.remove</source>
-        <target>Suprimir</target>
+        <target>Eliminar</target>
         
       </trans-unit>
       <trans-unit id="28">
         <source>label.lotation</source>
-        <target>Dotación</target>
+        <target>Alocação</target>
         
       </trans-unit>
       <trans-unit id="29">
         <source>label.name</source>
-        <target>Nombre</target>
+        <target>Nome</target>
         
       </trans-unit>
       <trans-unit id="30">
         <source>label.description</source>
-        <target>Descripción</target>
+        <target>Descrição</target>
         
       </trans-unit>
       <trans-unit id="31">
         <source>label.permissions</source>
-        <target>Perisos</target>
+        <target>Permissões</target>
         
       </trans-unit>
       <trans-unit id="32">
         <source>label.status</source>
-        <target>Situación</target>
+        <target>Situação</target>
         
       </trans-unit>
       <trans-unit id="33">
         <source>label.enabled</source>
-        <target>Activo</target>
+        <target>Ativo</target>
         
       </trans-unit>
       <trans-unit id="34">
         <source>label.disabled</source>
-        <target>Inactivo</target>
+        <target>Inativo</target>
         
       </trans-unit>
       <trans-unit id="35">
         <source>label.search</source>
-        <target>Buscar</target>
+        <target>Pesquisar</target>
         
       </trans-unit>
       <trans-unit id="36">
         <source>label.username</source>
-        <target>Nombre de usuario</target>
+        <target>Nome de utilizador</target>
         
       </trans-unit>
       <trans-unit id="37">
         <source>label.change_password</source>
-        <target>Modificar contraseña</target>
+        <target>Alterar senha</target>
         
       </trans-unit>
       <trans-unit id="40">
@@ -209,7 +202,7 @@
       </trans-unit>
       <trans-unit id="44">
         <source>error.permission_denied</source>
-        <target>Permiso denegado</target>
+        <target>Permissão negada</target>
         
       </trans-unit>
       <trans-unit id="45">
