--- a/Resources/translations/NovosgaUsersBundle.en.xlf
+++ b/Resources/translations/NovosgaUsersBundle.en.xlf
@@ -51,6 +51,11 @@
         <target>Active</target>
         
       </trans-unit>
+      <trans-unit id="9-2">
+        <source>form.user.admin</source>
+        <target>Is administrator?</target>
+        
+      </trans-unit>
       <trans-unit id="10">
         <source>form.user.password</source>
         <target>Ticket</target>
