--- a/Resources/translations/NovosgaUsersBundle.pt_PT.xlf
+++ b/Resources/translations/NovosgaUsersBundle.pt_PT.xlf
@@ -49,6 +49,11 @@
         <target>Ativo</target>
         
       </trans-unit>
+      <trans-unit id="9-2">
+        <source>form.user.admin</source>
+        <target>É administrador?</target>
+        
+      </trans-unit>
       <trans-unit id="10">
         <source>form.user.password</source>
         <target>Senha</target>
