--- a/Resources/translations/NovosgaUsersBundle.pt_PT.xlf
+++ b/Resources/translations/NovosgaUsersBundle.pt_PT.xlf
@@ -190,7 +190,7 @@
         
       </trans-unit>
       <trans-unit id="40">
-        <source>label.add_sucess</source>
+        <source>label.add_success</source>
         
       </trans-unit>
       <trans-unit id="41">
