--- a/Resources/translations/NovosgaUsersBundle.es_AR.xlf
+++ b/Resources/translations/NovosgaUsersBundle.es_AR.xlf
@@ -197,7 +197,7 @@
         
       </trans-unit>
       <trans-unit id="40">
-        <source>label.add_sucess</source>
+        <source>label.add_success</source>
         <target>Usuario agregado con éxito</target>
         
       </trans-unit>
