--- a/Resources/translations/NovosgaUsersBundle.pt_BR.xlf
+++ b/Resources/translations/NovosgaUsersBundle.pt_BR.xlf
@@ -159,7 +159,7 @@
         <target>Alterar senha</target>
       </trans-unit>
       <trans-unit id="40">
-        <source>label.add_sucess</source>
+        <source>label.add_success</source>
         <target>Usuário adicionado com sucesso</target>
       </trans-unit>
       <trans-unit id="41">
